Signed-off-by: unknown <mig.garzon@udla.edu.co>

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -46,6 +46,11 @@
       <input type="file" id="subirarchivo" name="subirarchivo" accept=".csv">
       <input type="submit">
   </form>
+
+  <h1>Crud</h1>
+  <form action="/Crud" >
+        <button>crud</button>
+  </form>
   
 </div>
 </body>
