Signed-off-by: Miguel Angel Garzon Sanabria <mig.garzon@udla.edu.co>

--- a/Templates/simple.html
+++ b/Templates/simple.html
@@ -23,116 +23,7 @@
   <!-- /.navbar -->
 
   <!-- Main Sidebar Container -->
-  <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <a href="/" class="brand-link">
-     
-      <span class="brand-text font-weight-light">Proyecto</span>
-    </a>
-
-    <!-- Sidebar -->
-    <div class="sidebar">
-      <!-- Sidebar user (optional) -->
-      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-        <div class="image">
-         
-        </div>
-        <div class="info">
-          <a href="/" class="d-block">Miguel garzon</a>
-        </div>
-      </div>
-
-      <!-- SidebarSearch Form -->
-      <div class="form-inline">
-        <div class="input-group" data-widget="sidebar-search">
-          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-          <div class="input-group-append">
-            <button class="btn btn-sidebar">
-              <i class="fas fa-search fa-fw"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Sidebar Menu -->
-      <nav class="mt-2">
-        <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-
-
-          <li class="nav-item">
-            <a href="/Historia_cvs" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
-              <p>
-                Menu
-
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon fas fa-copy"></i>
-              <p>
-                Perfil
-                <i class="fas fa-angle-left right"></i>
-                <span class="badge badge-info right">2</span>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="pages/layout/top-nav.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Contraseña</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>Usuario</p>
-                </a>
-              </li>
-
-            </ul>
-          </li>
-
-
-          <li class="nav-header">Herramientas</li>
-
-
-          <li class="nav-item">
-            <a href="pages/forms/advanced.html" class="nav-link">
-              <i class="nav-icon fas fa-book"></i>
-              <p>
-                Cargar CVS
-                <i class="fas fa-angle-left right"></i>
-              </p>
-            </a>
-
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">
-              <i class="nav-icon far fa-plus-square"></i>
-              <p>
-                Extras
-                <i class="fas fa-angle-left right"></i>
-              </p>
-            </a>
-            <ul class="nav nav-treeview">
-              <li class="nav-item">
-                <a href="/Historia_cvs" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>
-                    Historial CVS
-                    <i class="fas fa-angle-left right"></i>
-                  </p>
-                </a>
-              </li>
-            </ul>
-          </li>
-      </nav>
-      <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-  </aside>
+  {%include('partials/_navbar.html')%}
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
