--- a/Templates/partials/_navbar.html
+++ b/Templates/partials/_navbar.html
@@ -1,31 +1,103 @@
-<nav class="navbar navbar-expand-lg bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">tilin</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown link
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-        </ul>
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
+
+  <a href="/" class="brand-link">
+    <span class="brand-text font-weight-light">Inteligenci artificial</span>
+  </a>
+
+
+  <div class="sidebar">
+
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+
+      <div class="info">
+        <a href="#" class="d-block">Miguel Garzon</a>
       </div>
     </div>
-  </nav>
+
+    <!-- SidebarSearch Form -->
+
+
+    <!-- Sidebar Menu -->
+    <nav class="mt-2">
+      <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+
+
+        <li class="nav-item">
+          <a href="/" class="nav-link">
+            <i class="nav-icon fas fa-th"></i>
+            <p>
+              Menu
+
+            </p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="nav-icon fas fa-copy"></i>
+            <p>
+              Perfil
+              <i class="fas fa-angle-left right"></i>
+              <span class="badge badge-info right">2</span>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a href="pages/layout/top-nav.html" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Contraseña</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>Usuario</p>
+              </a>
+            </li>
+
+          </ul>
+        </li>
+
+
+        <li class="nav-header">Herramientas</li>
+
+
+        <li class="nav-item">
+          <a href="/Cargar_cvs" class="nav-link">
+            <i class="nav-icon fas fa-book"></i>
+            <p>
+              Cargar CVS
+              <i class="fas fa-angle-left right"></i>
+            </p>
+          </a>
+
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="nav-icon far fa-plus-square"></i>
+            <p>
+              Extras
+              <i class="fas fa-angle-left right"></i>
+            </p>
+          </a>
+          <ul class="nav nav-treeview">
+            <li class="nav-item">
+              <a href="/Historia_cvs" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>
+                  Historial CVS
+                  <i class="fas fa-angle-left right"></i>
+                </p>
+              </a>
+            </li>
+          </ul>
+        </li>
+    </nav>
+    <!-- /.sidebar-menu -->
+  </div>
+
+
+
+
+
+  <!-- /.sidebar -->
+</aside>
