--- a/Templates/partials/login-v2.html
+++ b/Templates/partials/login-v2.html
@@ -24,7 +24,7 @@
     <div class="card-body">
       <p class="login-box-msg">Inicio de sesion</p>
 
-      <form action="/" method="post">
+      <form action="/login" method="post">
         <div class="input-group mb-3">
           <input type="email" class="form-control" placeholder="Email" name="correo">
           <div class="input-group-append">
