--- a/Templates/simple.html
+++ b/Templates/simple.html
@@ -67,8 +67,8 @@
                    
                   {% for archivos in archivos %}
                    
-                    <td>{{archivos}}</td>
-                    <td>{{fecha}}</td>
+                    <td>{{archivos.nombre}}</td>
+                    <td>{{archivos.fecha}}</td>
                     <td>cvs</td>
                     <td> 1.0</td>
                       
