--- a/Templates/partials/_navbar.html
+++ b/Templates/partials/_navbar.html
@@ -23,7 +23,7 @@
 
 
         <li class="nav-item">
-          <a href="/home" class="nav-link">
+          <a href="/datos" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
               Menu
