--- a/Templates/partials/_navbar.html
+++ b/Templates/partials/_navbar.html
@@ -10,7 +10,7 @@
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
       <div class="info">
         <a href="#" class="d-block"> {{ current_user.fullname }}</a>
-        <a class="btn btn-secondary" href="/logout">Cerrar sesion</a>
+        <a class="btn btn-danger" href="/logout">Cerrar sesion</a>
       </div>
     </div>
 
