--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AdminLTE 3 | Log in (v2)</title>
+  <title>Opcion de grado</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -17,7 +17,15 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <!-- /.login-logo -->
- 
+  {% if messages %}
+    <br />
+    {% for message in messages %}
+      <div class="alert alert-primary alert-dismissible" role="alert">
+        <strong>{{ message }}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  {% endif %}
   <div class="card card-outline card-primary">
     <div class="card-header text-center">
       <a href="/login" class="h1"><b>Proyecto</b>final</a>
@@ -53,15 +61,7 @@
           </div>
           <!-- /.col -->
         </div>
-        {% if messages %}
-        <br />
-        {% for message in messages %}
-        <div class="alert alert-primary alert-dismissible" role="alert">
-            <strong>{{ message }}</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        {% endfor %}
-        {% endif %}
+        
       </form>
 
     
