Signed-off-by: unknown <mig.garzon@udla.edu.co>

--- a/Templates/index3.html
+++ b/Templates/index3.html
@@ -26,7 +26,9 @@
 
 <body class="hold-transition sidebar-mini">
   <div class="wrapper">
-    {%include('partials/_navbar.html')%}
+    <aside class="main-sidebar sidebar-dark-primary elevation-4">
+      {%include('partials/_navbar.html')%}
+    </aside>
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
       <div class="content-header">
